--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Ionic Grid
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -14,7 +14,8 @@
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-row>
+      <ion-col><ion-button [routerLink]="['/grid-basic']">Basic Grid</ion-button></ion-col>
+    </ion-row>
   </div>
 </ion-content>
